Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis
Peter L Jones
Devin Anderson
Josh Green
Mario Lang
Arnold Krille
Jan Engelhardt
Adrian Knoth
David Garcia Garzon
Valerio Pilo

---------------------------
  Jackdmp changes log
---------------------------

2011-03-23 Stephane Letz  <letz@grame.fr>

	* Devin Anderson server-ctl-proposal branch merged on trunk: improved control API, slave backend reworked.

2011-03-14 Stephane Letz  <letz@grame.fr>

	* Correct JackEngine::NotifyGraphReorder, update JackDebugClient with latest API.

2011-03-13 Stephane Letz  <letz@grame.fr>

	* Rework internal slave driver management, JackServerGlobals now handle same parameters as jackdmp.

2011-03-11 Stephane Letz  <letz@grame.fr>

	* Correct JackNetMaster::SetBufferSize.
	* Use jack_default_audio_sample_t instead of float consistently, fix ticket #201."
	* -X now allows to add several slave backends, add -I to load several internal clients.

2011-03-10 Stephane Letz  <letz@grame.fr>

	* Latency callback must always be activated.
	* Correct TopologicalSort. 
	* Add jack_midi_dump client.
	* Synchronize netjack1 with JACK1 version.
	* Synchronize jack_connect/jack_disconnect with JACK1 version.

2011-03-09 Stephane Letz  <letz@grame.fr>

	* jack_client_has_session_callback implementation.
	* Fix jdelay for new latency API.
	* Check requested buffer size and limit to 1..8192 - avoids wierd behaviour caused by jack_bufsize foobar.
	* jack_port_type_get_buffer_size implementation.
	* Stop using alloca and allocate buffer on the heap for alsa_io.
	* Rename jdelay to jack_iodelay as per Fons' request.
	* Call buffer size callback in activate (actually this is done on client side in the RT thread Init method).
	* JackEngine::ComputeTotalLatencies in progress.

2011-03-08 Stephane Letz  <letz@grame.fr>

	* Use of latency range in all backends.